# docs/swagger.yaml
@@ -270,6 +270,43 @@ paths:
             $ref: '#/definitions/webbase.Response'
       tags:
       - 收入管理相关接口
+  /ledger/v1/file/download:
+    get:
+      description: 下载图片
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 图片连接
+        in: query
+        name: icon
+        required: true
+        type: string
+      tags:
+      - 文件接口
+  /ledger/v1/file/upload:
+    post:
+      description: 上传图片
+      parameters:
+      - description: Bearer 31a165baebe6dec616b1f8f3207b4273
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 文件
+        in: formData
+        name: icon
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/webbase.Response'
+      tags:
+      - 文件接口
   /ledger/v1/revenue/add_revenue:
     post:
       description: 新增收入记录
