# pkg/server/webserver/file/file.go
@@ -6,11 +6,20 @@ import (
 	"ledger/conf"
 	"ledger/lib"
 	"ledger/sdk"
+	"os"
 	"path"
 	"strings"
 	"time"
 )
 
+// @Title 上传图片
+// @Author y18175612315@163.com
+// @Description 上传图片
+// @Tags 文件接口
+// @Param Authorization	header	string true "Bearer 31a165baebe6dec616b1f8f3207b4273"
+// @Param icon formData string true "文件"
+// @Success 200 {object} webbase.Response
+// @Router	/ledger/v1/file/upload [post]
 func (w *FileWebServer) Upload(c *gin.Context) {
 	file, err := c.FormFile("icon")
 	if err != nil {
@@ -39,11 +48,55 @@ func (w *FileWebServer) Upload(c *gin.Context) {
 
 	//存文件
 	t := time.Now().Format("2006-01-02")
-	fileName := fmt.Sprintf("%s_%s", t, file.Filename)
-	if err := c.SaveUploadedFile(file, fmt.Sprintf("%s/%d/%s", conf.Config.IconPath, u.UserId, fileName)); err != nil {
+	fileName := fmt.Sprintf("%s/%s_%s", u.Username, t, file.Filename)
+	if err := c.SaveUploadedFile(file, fmt.Sprintf("%s/%s", conf.Config.IconPath, fileName)); err != nil {
 		sdk.Log.Errorf("save file error:%s", err.Error())
 		w.Error(c, 5000, "save file error")
 		return
 	}
-	w.Success(c, nil)
+	w.Success(c, lib.UrlBese64Encode(fileName))
+}
+
+// @Title 下载图片
+// @Author y18175612315@163.com
+// @Description 下载图片
+// @Tags 文件接口
+// @Param Authorization	header	string true "Bearer 31a165baebe6dec616b1f8f3207b4273"
+// @Param icon query string true "图片连接"
+// @Router	/ledger/v1/file/download [get]
+func (w *FileWebServer) Download(c *gin.Context) {
+	icon := c.Param("icon")
+	path := lib.UrlBese64Decode(icon)
+	f, err := os.Open(fmt.Sprintf("%s/%s", conf.Config.IconPath, path))
+	if err != nil {
+		sdk.Log.Errorf("open file error :%s", err.Error())
+		c.Status(404)
+		return
+	}
+	defer f.Close()
+
+	//文件流
+	var content []byte
+	if _,err:=f.Read(content);err!=nil{
+		sdk.Log.Error("read file error: ", err)
+		w.Error(c, 5000, "read file error")
+		return
+	}
+
+	fileNameList := strings.Split(path, "/")
+	fileName := fileNameList[len(fileNameList)-1]
+
+	attachment := fmt.Sprintf("attachment; filename=%s", fileName)
+	c.Header("Content-Description", "File Transfer")
+	c.Header("Content-Type", "application/octet-stream")
+	c.Header("Content-Disposition", attachment)
+	c.Header("Content-Transfer-Encoding", "binary")
+	c.Header("Accept-Length", fmt.Sprintf("%d", len(content)))
+	//回写到web 流媒体 形成下载
+	if _, err := c.Writer.Write(content); err != nil {
+		sdk.Log.Error("Error write back: ", err)
+		w.Error(c, 5000, "error download")
+		return
+	}
+
 }
